--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hw3-crud",
+  "name": "hw4-validation",
   "version": "1.0.0",
   "type": "module",
   "main": "src/index.js",
@@ -24,6 +24,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "http-errors": "^2.0.0",
+    "joi": "^17.13.3",
     "mongoose": "^8.8.1",
     "pino-http": "^10.3.0"
   }
