--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hw4-validation",
+  "name": "hw6-email-and-images",
   "version": "1.0.0",
   "type": "module",
   "main": "src/index.js",
@@ -25,9 +25,12 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "handlebars": "^4.7.8",
     "http-errors": "^2.0.0",
     "joi": "^17.13.3",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.8.1",
+    "nodemailer": "^6.9.16",
     "pino-http": "^10.3.0"
   }
 }
