--- a/.env.example
+++ b/.env.example
@@ -16,3 +16,10 @@ APP_DOMAIN=
 CLOUD_NAME=
 API_KEY=
 API_SECRET=
+
+
+ENABLE_CLOUDINARY=
+
+GOOGLE_OAUTH_CLIENT_ID=
+GOOGLE_OAUTH_CLIENT_SECRET=
+GOOGLE_OAUTH_REDIRECT_URL=
